[package]
name = "membralysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
molar = {version = "0.3", path = "../molar", default-features = false}
toml = "0.8.12"
serde = {version = "1.0", features = ["derive"]}

[lib]
name = "membralysis"
path = "src/lib.rs"

[[bin]]
name = "membralysis-driver"
path = "src/main.rs"
